Fix a bunch of broken links

--- a/notebooks/00-00-Preface.ipynb
+++ b/notebooks/00-00-Preface.ipynb
@@ -79,7 +79,7 @@
     "+ Thomas Stibor\n",
     "\n",
     "If you have provided feedback and are not listed above, we apologize -- please\n",
-    "[open an issue here](https://github.com/mwcraig/ccd-reduction-and-photometry-guide/issues/new) so we can fix it."
+    "[open an issue here](https://github.com/astropy/ccd-reduction-and-photometry-guide/issues/new) so we can fix it."
    ]
   },
   {
@@ -97,7 +97,7 @@
     "+ [The Handbook of Astronomical Image Processing](https://www.amazon.com/Handbook-Astronomical-Image-Processing/dp/0943396824) by Richard Berry and James Burnell. This\n",
     "provides a very detailed overview of data reduction and photometry. One virtue\n",
     "is its inclusion of *real* images with defects.\n",
-    "+ The [AAVSO CCD Obseving Manual]() provides a complete introduction to CCD data reduction and photometry.  \n",
+    "+ The [AAVSO CCD Obseving Manual](https://www.aavso.org/sites/default/files/publications_files/ccd_photometry_guide/CCDPhotometryGuide.pdf) provides a complete introduction to CCD data reduction and photometry.  \n",
     "+ [A Beginner's Guide to Working with Astronomical Data](https://arxiv.org/abs/1905.13189) is much broader than this guide. It\n",
     "includes an introduction to Python."
    ]
