--- a/notebooks/01-06-Image-combination.ipynb
+++ b/notebooks/01-06-Image-combination.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "+ reduces noise in images\n",
     "+ can remove transient artifacts like cosmic rays and satellite tracks\n",
-    "+ can remove stars in [flat images taken at twilight](FIX_LINK)\n",
+    "+ can remove stars in flat images taken at twilight\n",
     "\n",
     "It's essential that several of each type of calibration image (bias, dark, flat)\n",
     "be taken. Combining them reduces the noise in the images by roughly a factor of\n",
@@ -23,7 +23,7 @@
     "If done incorrectly, those features show up in your combined images and then\n",
     "contaminate your calibrated science images too.\n",
     "\n",
-    "### The bottom line: combine by averaging images, but clip extreme values\n",
+    "## The bottom line: combine by averaging images, but clip extreme values\n",
     "\n",
     "The remainder of this notebook demonstrates this conclusion and explains how to\n",
     "do a combination by averaging images with [ccdproc](https://ccdproc.readthedocs.io/en/latest/)."
@@ -559,9 +559,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
