--- a/notebooks/02-01-Calibrating-bias-images.ipynb
+++ b/notebooks/02-01-Calibrating-bias-images.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data for these examples"
+    "## Data for these examples"
    ]
   },
   {
@@ -479,7 +479,7 @@
    "source": [
     "### Trim the overscan (one sample image)\n",
     "\n",
-    "The function `trim_image` from [ccdproc](ccdproc.rtfd.io) removes a\n",
+    "The function `trim_image` from [ccdproc](https://ccdproc.readthedocs.io) removes a\n",
     "portion of the image and updates the image metadata as needed.\n",
     "\n",
     "Below we get the first bias image."
