--- a/notebooks/02-04-Combine-bias-images-to-make-master.ipynb
+++ b/notebooks/02-04-Combine-bias-images-to-make-master.ipynb
@@ -57,15 +57,15 @@
    "source": [
     "## Recommended settings for image combination\n",
     "\n",
-    "As discussed in the [notebook about combining images](), the recommendation is\n",
+    "As discussed in the [notebook about combining images](01-06-Image-combination.ipynb), the recommendation is\n",
     "that you combine by averaging the individual images but sigma clip to remove\n",
     "extreme values.\n",
     "\n",
-    "[ccdproc]() provides two ways to combine:\n",
+    "[ccdproc](https://ccdproc.readthedocs.org) provides two ways to combine:\n",
     "\n",
     "+ An object-oriented interface built around the `Combiner` object, described in\n",
-    "the [ccdproc documentation on image combination]().\n",
-    "+ A function called `combine`, which we will use here because the function\n",
+    "the [ccdproc documentation on image combination](https://ccdproc.readthedocs.io/en/latest/image_combination.html).\n",
+    "+ A function called [`combine`](https://ccdproc.readthedocs.io/en/latest/api/ccdproc.combine.html#ccdproc.combine), which we will use here because the function\n",
     "allows you to specify the maximum amount of memory that should be used during\n",
     "combination. This feature can be essential depending on how many images you need\n",
     "to combine, how big they are, and how much memory your computer has.\n",
