--- a/notebooks/03-02-Real-dark-current-noise-and-other-artifacts.ipynb
+++ b/notebooks/03-02-Real-dark-current-noise-and-other-artifacts.ipynb
@@ -62,7 +62,7 @@
     "exposure time, ideally long enough that the expected counts due to dark current\n",
     "is larger than the expected noise in the image. If that isn't the case then the\n",
     "dark images will be measuring noise, not dark current, as we saw in the\n",
-    "[previous section](03.01-Dark-current-The-ideal-case).\n",
+    "[previous section](03-01-Dark-current-The-ideal-case.ipynb).\n",
     "\n",
     "There are two ways to ensure that you are measuring dark current:\n",
     "\n",
