--- a/notebooks/03-05-Calibrate-dark-images.ipynb
+++ b/notebooks/03-05-Calibrate-dark-images.ipynb
@@ -104,8 +104,7 @@
     "### Decide which calibration  steps to take\n",
     "\n",
     "This example is, again, one of the chips of the LFC camera at Palomar. In\n",
-    "earlier notebooks we have seen that the chip has a useful overscan region\n",
-    "(LINK), has little dark current except for some hot pixels, and sensor glow in\n",
+    "earlier notebooks we have seen that the chip has a [useful overscan region](01.08-Overscan.ipynb#Case-1:-Cryogenically-cooled-Large-Format-Camera-(LFC)-at-Palomar), has little dark current except for some hot pixels, and sensor glow in\n",
     "one corner of the chip.\n",
     "\n",
     "Looking at the list of non-dark images (i.e., the flat and light images) shows\n",
