--- a/notebooks/08-01-Identifying-hot-pixels.ipynb
+++ b/notebooks/08-01-Identifying-hot-pixels.ipynb
@@ -278,7 +278,7 @@
    "source": [
     "## Saving the mask\n",
     "\n",
-    "The mask can be saved as in a FITS file. We will see in the notebook [XXX]() how\n",
+    "The mask can be saved as in a FITS file. We will see in the notebook [incorporating masks in science images](08-05-incorporating-masks-into-calibrated-science-images.ipynb) how\n",
     "to include this mask. Casting the mask as an unsigned integer is necessary\n",
     "because FITS cannot store boolean data."
    ]
