--- a/notebooks/08-02-Creating-a-mask.ipynb
+++ b/notebooks/08-02-Creating-a-mask.ipynb
@@ -18,7 +18,7 @@
     "parameters, they are not removed from science images.\n",
     "\n",
     "The first three points are discussed in this notebook. Removal of cosmic rays from\n",
-    "science images is discussed [in the cosmic ray notebook]()."
+    "science images is discussed [in the cosmic ray notebook](08-03-Cosmic-ray-removal.ipynb)."
    ]
   },
   {
@@ -266,7 +266,7 @@
     "### Saving the mask\n",
     "\n",
     "The mask can be saved in a FITS file as an image. We will see in [the summary\n",
-    "notebook on masking]() how to combine the mask generated here with a mask\n",
+    "notebook on masking](08-05-incorporating-masks-into-calibrated-science-images.ipynb) how to combine the mask generated here with a mask\n",
     "generated from the dark current and with a cosmic ray mask for each science\n",
     "image."
    ]
