--- a/notebooks/05-03-Calibrating-the-flats.ipynb
+++ b/notebooks/05-03-Calibrating-the-flats.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function definition\n",
+    "## Function definition\n",
     "\n",
     "The function below finds the nearest dark exposure time to the exposure time of\n",
     "a given image. An exception is raised if the difference in exposure time is\n",
@@ -607,7 +607,7 @@
     "\n",
     "Here we will need to scale the dark from the 90 sec exposure time of the dark\n",
     "frame to the exposure time of each flat image. The [ccdproc function\n",
-    "`subtract_dark`]() provides keywords for doing this scaling automatically."
+    "`subtract_dark`](https://ccdproc.readthedocs.io/en/latest/api/ccdproc.subtract_dark.html#ccdproc.subtract_dark) provides keywords for doing this scaling automatically."
    ]
   },
   {
