--- a/notebooks/06-00-Reducing-science-images.ipynb
+++ b/notebooks/06-00-Reducing-science-images.ipynb
@@ -40,12 +40,12 @@
    "source": [
     "## Overview\n",
     "\n",
-    "[ccdproc](ccdproc.readthedocs.io) provides a couple of ways to approach\n",
+    "[ccdproc](https://ccdproc.readthedocs.io) provides a couple of ways to approach\n",
     "calibration of the science images:\n",
     "\n",
     "+ Perform each of the individual steps manually using `subtract_bias`,\n",
     "`subtract_dark`, and `flat_correct`.\n",
-    "+ Use the [`ccd_process` function]() to perform all of the reduction steps.\n",
+    "+ Use the [`ccd_process` function](https://ccdproc.readthedocs.io/en/latest/api/ccdproc.ccd_process.html#ccdproc.ccd_process) to perform all of the reduction steps.\n",
     "\n",
     "This notebook will do each of these in separate sections below."
    ]
@@ -109,8 +109,8 @@
     "The data in this example is from chip 0 of the Large Format Camera at Palomar\n",
     "Observatory. In earlier notebooks we determined that:\n",
     "\n",
-    "+ This CCD has a [useful overscan region]().\n",
-    "+ There is [no need to scale dark frames]() in this data, and so no need to subtract bias.\n",
+    "+ This CCD has a [useful overscan region](01.08-Overscan.ipynb#Case-1:-Cryogenically-cooled-Large-Format-Camera-(LFC)-at-Palomar).\n",
+    "+ There is [no need to scale dark frames](05-03-Calibrating-the-flats.ipynb#Subtracting-bias-is-not-necessary-in-this-example) in this data, and so no need to subtract bias.\n",
     "\n",
     "First, we create [ImageFileCollection](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html)s for the raw data and the calibrated\n",
     "data, and define variables for the image type of the flat field and the science\n",
@@ -203,7 +203,7 @@
     "\n",
     "These are the minimum steps needed to calibrate. Gain correcting the data and\n",
     "identifying cosmic rays are additional steps that might often be done at this\n",
-    "stage. Identification of cosmic rays will be discussed in [this notebook]()."
+    "stage. Identification of cosmic rays will be discussed in [this notebook](08-03-Cosmic-ray-removal.ipynb)."
    ]
   },
   {
@@ -271,7 +271,7 @@
     "is also still present in the calibrated images, particularly in the `g'` filter.\n",
     "\n",
     "Those pixels will need to be masked, as described in the [notebook on bad\n",
-    "pixels]()."
+    "pixels](08-01-Identifying-hot-pixels.ipynb)."
    ]
   },
   {
