Fix command for changing dtype of image
Fixes #236

--- a/notebooks/02-01-Calibrating-bias-images.ipynb
+++ b/notebooks/02-01-Calibrating-bias-images.ipynb
@@ -317,7 +317,7 @@
     "image is stored as floating point numbers, which default in Python to 64-bit\n",
     "floats. The memory size is also the size the files will have when written to\n",
     "disk (ignoring any compression). You can reduce the memory and disk footprint by\n",
-    "changing the `dtype` of the image: `trimmed_bias.dtype = 'float32'`. It is best\n",
+    "changing the `dtype` of the image: `trimmed_bias.data = trimmed_bias.data.astype('float32')`. It is best\n",
     "to do this just before writing the image out because arithmetic operations on\n",
     "the image may convert its `dtype` back to `float64`.\n",
     "\n"
