--- a/notebooks/Artificial-image-explorer.ipynb
+++ b/notebooks/Artificial-image-explorer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0d7e4ea8f6e241099afcd01f427e50a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=1100, continuous_update=False, description='bias_level', max=1200, min=1…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def complete_image(bias_level=1100, read=10.0, gain=1, dark=0.1, \n",
     "                   exposure=30, hot_pixels=True, sky_counts=200):\n",
