Make a couple of changes to reduce file size of converted notebooks

--- a/notebooks/08-02-Creating-a-mask.ipynb
+++ b/notebooks/08-02-Creating-a-mask.ipynb
@@ -198,12 +198,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = plt.subplots(1, 2, figsize=(40, 20))\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(20, 10))\n",
     "\n",
     "show_image(ratio, cmap='gray', fig=fig, ax=axes[0], show_colorbar=False)\n",
     "axes[0].set_title('Ratio of two flats')\n",
     "\n",
-    "show_image(maskr, cmap='gray', fig=fig, ax=axes[1], show_colorbar=False)\n",
+    "show_image(maskr, cmap='gray', fig=fig, ax=axes[1], show_colorbar=False, percl=99.95)\n",
     "axes[1].set_title('Derived mask')"
    ]
   },
