Change name of file to combined dark

--- a/notebooks/08-01-Identifying-hot-pixels.ipynb
+++ b/notebooks/08-01-Identifying-hot-pixels.ipynb
@@ -98,7 +98,7 @@
     "ex2_path = Path('example2-reduced')\n",
     "\n",
     "dark_90 = CCDData.read(ex2_path / 'combined_dark_90.000.fit')\n",
-    "dark_1000 = CCDData.read('master_dark_exposure_1000.0.fit.bz2')\n",
+    "dark_1000 = CCDData.read('combined_dark_exposure_1000.0.fit.bz2'')\n",
     "dark_1000 = ccdp.trim_image(dark_1000[:, :4096])\n",
     "\n",
     "dark_90 = dark_90.multiply(1.5 * u.electron / u.adu).divide(90 * u.second)\n",
