Add new contributor 🎉

--- a/notebooks/00-00-Preface.ipynb
+++ b/notebooks/00-00-Preface.ipynb
@@ -66,12 +66,13 @@
     "### Acknowledgments\n",
     "\n",
     "The following people contributed to this work by making suggestions, testing\n",
-    "code, or providing feedback on drafts. We are greatful for their assistance!\n",
+    "code, or providing feedback on drafts. We are grateful for their assistance!\n",
     "\n",
     "+ Simon Conseil\n",
     "+ Lia Corrales\n",
     "+ Kelle Cruz\n",
     "+ Adam Ginsburg\n",
+    "+ Yash Gondhalekar\n"
     "+ Richard Hendricks\n",
     "+ Stuart Littlefair\n",
     "+ Isobel Snellenberger\n",
