Fix a few typos in notebooks

--- a/notebooks/03-02-Real-dark-current-noise-and-other-artifacts.ipynb
+++ b/notebooks/03-02-Real-dark-current-noise-and-other-artifacts.ipynb
@@ -300,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dark_1000 = CCDData.read('combined_dark_exposure_1000.0.fit.bz2'')\n",
+    "dark_1000 = CCDData.read('combined_dark_exposure_1000.0.fit.bz2')\n",
     "show_image(dark_1000, cmap='gray')"
    ]
   },
