Fix typo in notebook JSON

--- a/notebooks/00-00-Preface.ipynb
+++ b/notebooks/00-00-Preface.ipynb
@@ -72,7 +72,7 @@
     "+ Lia Corrales\n",
     "+ Kelle Cruz\n",
     "+ Adam Ginsburg\n",
-    "+ Yash Gondhalekar\n"
+    "+ Yash Gondhalekar\n",
     "+ Richard Hendricks\n",
     "+ Stuart Littlefair\n",
     "+ Isobel Snellenberger\n",
