MNT: Replace master with main

--- a/notebooks/01-09-Calibration-choices-you-need-to-make.ipynb
+++ b/notebooks/01-09-Calibration-choices-you-need-to-make.ipynb
@@ -22,13 +22,13 @@
     "## Subtract bias and dark as separate steps or in one step?\n",
     "\n",
     "Every dark image contains bias when it comes off of the camera, so in principle\n",
-    "you can take care of both bias and dark by constructing a master dark image that\n",
+    "you can take care of both bias and dark by constructing a main dark image that\n",
     "leaves the bias already present in the dark images in place.\n",
     "\n",
     "This only works if for every image from which you need to remove dark currrent\n",
-    "you have a master dark of exactly the same exposure length.\n",
+    "you have a main dark of exactly the same exposure length.\n",
     "\n",
-    "If not, you need to produce master dark images with the bias removed so that\n",
+    "If not, you need to produce main dark images with the bias removed so that\n",
     "they can be scaled by exposure time."
    ]
   },
