--- a/notebooks/02-04-Combine-bias-images-to-make-master.ipynb
+++ b/notebooks/02-04-Combine-bias-images-to-make-master.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Combine bias images to make master\n"
+    "# Combine bias images to make main\n"
    ]
   },
   {
