Revert out-of-scope changes

--- a/notebooks/01-08-Overscan.ipynb
+++ b/notebooks/01-08-Overscan.ipynb
@@ -218,7 +218,7 @@
     "kelt = CCDData.read(therma_path / 'kelt-16-b-S001-R001-C084-r.fit', unit='adu')\n",
     "dark1000 = CCDData.read('dark-test-0002d1000.fit.bz2', unit='adu')\n",
     "flat = CCDData.read(therma_path / 'AutoFlat-PANoRot-r-Bin1-006.fit', unit='adu')\n",
-    "main = CCDData.read('combined_bias_100_images.fit.bz2', unit='adu')"
+    "master = CCDData.read('combined_bias_100_images.fit.bz2', unit='adu')"
    ]
   },
   {
@@ -230,7 +230,7 @@
     "plt.figure(figsize=(20,10))\n",
     "\n",
     "plt.plot(kelt.data.mean(axis=0), label='night sky average')\n",
-    "plt.plot(main.data.mean(axis=0), label='100 bias combined')\n",
+    "plt.plot(master.data.mean(axis=0), label='100 bias combined')\n",
     "plt.plot(dark1000.data.mean(axis=0), label='1000sec dark average')\n",
     "plt.plot(flat.data.mean(axis=0), label='flat average')\n",
     "\n",
