--- a/notebooks/02-00-Handling-overscan-trimming-and-bias-subtraction.ipynb
+++ b/notebooks/02-00-Handling-overscan-trimming-and-bias-subtraction.ipynb
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "one_bias = CCDData.read(download_base_url + 'dark-test-0100bias.fit.gz', unit='adu')\n",
-    "one_hundred_bias = CCDData.read(download_base_url + 'main_bias.fit.gz', unit='adu')"
+    "one_hundred_bias = CCDData.read(download_base_url + 'master_bias.fit.gz', unit='adu')"
    ]
   },
   {
@@ -187,7 +187,7 @@
     "The progression here is to \"calibrate\" the bias images by subtracting overscan,\n",
     "if desired, trim the overscan from the bias images if it is present, and combine\n",
     "all of the bias images to make a \"combined\" bias (another common term for these\n",
-    "images is \"main\" bias and occasionally \"super\" bias)."
+    "images is \"master\" bias and occasionally \"super\" bias)."
    ]
   }
  ],
