Remove unneeded newlines

--- a/notebooks/05-01-about-flat-corrections.ipynb
+++ b/notebooks/05-01-about-flat-corrections.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# More about flat corrections\n"
+    "# More about flat corrections"
    ]
   },
   {
