--- a/notebooks/01-01-astronomical-CCD-image-components.ipynb
+++ b/notebooks/01-01-astronomical-CCD-image-components.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Understanding an astronomical CCD image\n"
+    "# Understanding an astronomical CCD image"
    ]
   },
   {
