--- a/notebooks/05-00-Flat-corrections.ipynb
+++ b/notebooks/05-00-Flat-corrections.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Flat corrections\n"
+    "# Flat corrections"
    ]
   },
   {
