Add link to raw images
Fixes #229

--- a/notebooks/05-03-Calibrating-the-flats.ipynb
+++ b/notebooks/05-03-Calibrating-the-flats.ipynb
@@ -120,7 +120,7 @@
     "## Example 1: No scaling of dark frames\n",
     "\n",
     "The images for this example are from chip 0 of the Large Format Camera at\n",
-    "Palomar Observatory. The raw images are at XXX, and this notebook assumes that\n",
+    "Palomar Observatory. The raw images are [on Zenodo](https://doi.org/10.5281/zenodo.3254683), and this notebook assumes that\n",
     "you have worked through the notebooks on bias and dark so that there is a folder\n",
     "called `example1-reduced` in the same folder as this notebook.\n",
     "\n",
