--- a/notebooks/00-00-Preface.ipynb
+++ b/notebooks/00-00-Preface.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "source": [
     "The guide now has version numbers, roughly equivalent to editions in a printed book. Each\n",
-    "edition number has three pieces -- for example the first officially version is `2.0.0`. \n",
+    "number has three pieces -- for example the first official stable version is `2.0.0`. \n",
     "Think of that as roughly equivalent to \"edition\", \"revision\" and \"printing\" in the physical \n",
     "book world.\n",
     "\n",
