deploy: 8370d0c29aa11bc4e623350cc5cf9232e5bb02da

--- a/v/dev/_sources/notebooks/00-00-Preface.ipynb
+++ b/v/dev/_sources/notebooks/00-00-Preface.ipynb
@@ -24,6 +24,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Guide editions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The guide now has version numbers, roughly equivalent to editions in a printed book. Each\n",
+    "number has three pieces -- for example the first official stable version is `2.0.0`. \n",
+    "Think of that as roughly equivalent to \"edition\", \"revision\" and \"printing\" in the physical \n",
+    "book world.\n",
+    "\n",
+    "The edition number is listed in the sidebar.\n",
+    "\n",
+    "This is what changes in each of those numbers means:\n",
+    "\n",
+    "+ Change in the first number, e.g. changing `2.0.0` → `3.0.0`, indicates a major revision \n",
+    "  that changes the numbering of sections or adds significant new sections.\n",
+    "+ Changes in the middle number, e.g. changing `2.0.0` → `2.1.0`, indicates suibstantive \n",
+    "  updates have been made to the content and/or important errors have been fixed. The \n",
+    "  section numbers will not change, though.\n",
+    "+ Changes in the last number, e.g. changing `2.0.0` → `2.0.1`, indicates minor changes have \n",
+    "  been made like fixing typographic errors, broken links, and similar corrections. The \n",
+    "  section numbers will not change in these revisions.\n",
+    "  \n",
+    "In addition, there is a \"development\" version available that reflects the latest changes \n",
+    "made to the guide between releases.\n",
+    "\n",
+    "Those familiar with [semantic versioning](https://semver.org/) from software development will recognize this as \n",
+    "roughly the equivalent for text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Credits"
    ]
   },
@@ -170,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
