--- a/v/dev/_sources/notebooks/00-00-Preface.ipynb
+++ b/v/dev/_sources/notebooks/00-00-Preface.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Guide editions"
+    "## Edition numbers"
    ]
   },
   {
