--- a/v/dev/_sources/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
+++ b/v/dev/_sources/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
@@ -30,6 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "%matplotlib inline\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
@@ -44,6 +46,20 @@
    "source": [
     "# Use custom style for larger fonts and figures\n",
     "plt.style.use('guide.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up the random number generator, allowing a seed to be set from the environment\n",
+    "seed = os.getenv('GUIDE_RANDOM_SEED', None)\n",
+    "\n",
+    "# This is the generator to use for any image component which changes in each image, e.g. read noise\n",
+    "# or Poisson error\n",
+    "noise_rng = np.random.default_rng(int(seed))"
    ]
   },
   {
@@ -133,7 +149,7 @@
     "    \"\"\"\n",
     "    shape = image.shape\n",
     "    \n",
-    "    noise = np.random.normal(scale=amount/gain, size=shape)\n",
+    "    noise = noise_rng.normal(scale=amount/gain, size=shape)\n",
     "    \n",
     "    return noise"
    ]
@@ -311,7 +327,7 @@
     "    base_current = current * exposure_time / gain\n",
     "    \n",
     "    # This random number generation should change on each call.\n",
-    "    dark_im = np.random.poisson(base_current, size=image.shape)\n",
+    "    dark_im = noise_rng.poisson(base_current, size=image.shape)\n",
     "        \n",
     "    if hot_pixels:\n",
     "        # We'll set 0.01% of the pixels to be hot; that is probably too high but should \n",
@@ -411,7 +427,7 @@
     "    gain : float, optional\n",
     "        Gain of the camera, in units of electrons/ADU.\n",
     "    \"\"\"\n",
-    "    sky_im = np.random.poisson(sky_counts * gain, size=image.shape) / gain\n",
+    "    sky_im = noise_rng.poisson(sky_counts * gain, size=image.shape) / gain\n",
     "    \n",
     "    return sky_im"
    ]
@@ -647,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
