--- a/v/dev/_sources/notebooks/01-06-Image-combination.ipynb
+++ b/v/dev/_sources/notebooks/01-06-Image-combination.ipynb
@@ -35,6 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "%matplotlib inline\n",
@@ -64,6 +66,20 @@
     "# Set some default parameters for the plots below\n",
     "rc('font', size=20)\n",
     "rc('axes', grid=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up the random number generator, allowing a seed to be set from the environment\n",
+    "seed = os.getenv('GUIDE_RANDOM_SEED', None)\n",
+    "\n",
+    "# This is the generator to use for any image component which changes in each image, e.g. read noise\n",
+    "# or Poisson error\n",
+    "noise_rng = np.random.default_rng(int(seed))"
    ]
   },
   {
@@ -106,7 +122,7 @@
     "n_distributions = 100\n",
     "bias_level = 1000\n",
     "n_side = 320\n",
-    "bits = np.random.randn(n_distributions, n_side**2) + bias_level\n",
+    "bits = noise_rng.normal(size=(n_distributions, n_side**2)) + bias_level\n",
     "average = np.average(bits, axis=0)\n",
     "median = np.median(bits, axis=0)"
    ]
@@ -559,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
