Fix handling of None as random seed

--- a/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
+++ b/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
@@ -57,9 +57,12 @@
     "# Set up the random number generator, allowing a seed to be set from the environment\n",
     "seed = os.getenv('GUIDE_RANDOM_SEED', None)\n",
     "\n",
+    "if seed is not None:\n",
+    "    seed = int(seed)\n",
+    "    \n",
     "# This is the generator to use for any image component which changes in each image, e.g. read noise\n",
     "# or Poisson error\n",
-    "noise_rng = np.random.default_rng(int(seed))"
+    "noise_rng = np.random.default_rng(seed)"
    ]
   },
   {
