--- a/notebooks/00-00-Preface.ipynb
+++ b/notebooks/00-00-Preface.ipynb
@@ -111,6 +111,7 @@
     "+ Yash Gondhalekar\n",
     "+ Richard Hendricks\n",
     "+ Stuart Littlefair\n",
+    "+ Matt Phillips\n",
     "+ Isobel Snellenberger\n",
     "+ Kris Stern\n",
     "+ Thomas Stibor\n",
