--- a/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
+++ b/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
@@ -345,7 +345,7 @@
     "        \n",
     "        hot_current = 10000 * current\n",
     "        \n",
-    "        dark_im[[hot_y, hot_x]] = hot_current * exposure_time / gain\n",
+    "        dark_im[(hot_y, hot_x)] = hot_current * exposure_time / gain\n",
     "    return dark_im"
    ]
   },
@@ -649,7 +649,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -663,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
