Fix broken import

--- a/notebooks/08-03-Cosmic-ray-removal.ipynb
+++ b/notebooks/08-03-Cosmic-ray-removal.ipynb
@@ -95,7 +95,7 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "from astropy.nddata import CCDData\n",
-    "from astropy.nddata.utils import block_replicate\n",
+    "from astropy.nddata import block_replicate\n",
     "from astropy import units as u\n",
     "import ccdproc as ccdp\n",
     "from photutils import detect_sources\n",
