--- a/v/dev/_sources/notebooks/05-03-Calibrating-the-flats.ipynb
+++ b/v/dev/_sources/notebooks/05-03-Calibrating-the-flats.ipynb
@@ -80,7 +80,7 @@
     "        np.abs(image.header['exptime'] - closest_dark_exposure) > tolerance):\n",
     "        \n",
     "        raise RuntimeError('Closest dark exposure time is {} for flat of exposure '\n",
-    "                           'time {}.'.format(closest_dark_exposure, a_flat.header['exptime']))\n",
+    "                           'time {}.'.format(closest_dark_exposure, image.header['exptime']))\n",
     "        \n",
     "    \n",
     "    return closest_dark_exposure"
