Add zenodo download link for file
Also avoid suing university server for image downloads

--- a/notebooks/02-01-overscan-trimming-and-bias-subtraction-background.ipynb
+++ b/notebooks/02-01-overscan-trimming-and-bias-subtraction-background.ipynb
@@ -61,9 +61,7 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "from convenience_functions import show_image\n",
-    "\n",
-    "download_base_url = 'http://physics.mnstate.edu/craig/ccd-guide/'"
+    "from convenience_functions import show_image"
    ]
   },
   {
@@ -72,8 +70,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "one_bias = CCDData.read(download_base_url + 'dark-test-0100bias.fit.gz', unit='adu')\n",
-    "one_hundred_bias = CCDData.read(download_base_url + 'master_bias.fit.gz', unit='adu')"
+    "one_bias = CCDData.read('single_bias_thermoelectric.fit.bz2', unit='adu')\n",
+    "one_hundred_bias = CCDData.read('combined_bias_100_images.fit.bz2', unit='adu')"
    ]
   },
   {
