deploy: 0ebf188c66f3417c2d31e42c9c68d8bd5e3ef5d2

--- a/v/dev/_sources/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
+++ b/v/dev/_sources/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
@@ -348,7 +348,7 @@
     "        \n",
     "        hot_current = 10000 * current\n",
     "        \n",
-    "        dark_im[[hot_y, hot_x]] = hot_current * exposure_time / gain\n",
+    "        dark_im[(hot_y, hot_x)] = hot_current * exposure_time / gain\n",
     "    return dark_im"
    ]
   },
