--- a/v/dev/_sources/notebooks/00-00-Preface.ipynb
+++ b/v/dev/_sources/notebooks/00-00-Preface.ipynb
@@ -31,28 +31,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The guide now has version numbers, roughly equivalent to editions in a printed book. Each\n",
-    "number has three pieces -- for example the first official stable version is `2.0.0`. \n",
-    "Think of that as roughly equivalent to \"edition\", \"revision\" and \"printing\" in the physical \n",
+    "The guide now has version numbers, roughly equivalent to editions in a printed\n",
+    "book. Each\n",
+    "number has three pieces -- for example the first official stable version is\n",
+    "`2.0.0`.\n",
+    "Think of that as roughly equivalent to \"edition\", \"revision\" and \"printing\" in\n",
+    "the physical\n",
     "book world.\n",
     "\n",
     "The edition number is listed in the sidebar.\n",
     "\n",
     "This is what changes in each of those numbers means:\n",
     "\n",
-    "+ Change in the first number, e.g. changing `2.0.0` → `3.0.0`, indicates a major revision \n",
+    "+ Change in the first number, e.g. changing `2.0.0` → `3.0.0`, indicates a major\n",
+    "revision\n",
     "  that changes the numbering of sections or adds significant new sections.\n",
-    "+ Changes in the middle number, e.g. changing `2.0.0` → `2.1.0`, indicates suibstantive \n",
-    "  updates have been made to the content and/or important errors have been fixed. The \n",
+    "+ Changes in the middle number, e.g. changing `2.0.0` → `2.1.0`, indicates\n",
+    "suibstantive\n",
+    "  updates have been made to the content and/or important errors have been fixed.\n",
+    "The\n",
     "  section numbers will not change, though.\n",
-    "+ Changes in the last number, e.g. changing `2.0.0` → `2.0.1`, indicates minor changes have \n",
-    "  been made like fixing typographic errors, broken links, and similar corrections. The \n",
+    "+ Changes in the last number, e.g. changing `2.0.0` → `2.0.1`, indicates minor\n",
+    "changes have\n",
+    "  been made like fixing typographic errors, broken links, and similar\n",
+    "corrections. The\n",
     "  section numbers will not change in these revisions.\n",
-    "  \n",
-    "In addition, there is a \"development\" version available that reflects the latest changes \n",
+    "In addition, there is a \"development\" version available that reflects the latest\n",
+    "changes\n",
     "made to the guide between releases.\n",
     "\n",
-    "Those familiar with [semantic versioning](https://semver.org/) from software development will recognize this as \n",
+    "Those familiar with [semantic versioning](https://semver.org/) from software development\n",
+    "will recognize this as\n",
     "roughly the equivalent for text."
    ]
   },
@@ -135,7 +144,8 @@
     "+ [The Handbook of Astronomical Image Processing](https://www.amazon.com/Handbook-Astronomical-Image-Processing/dp/0943396824) by Richard Berry and James Burnell. This\n",
     "provides a very detailed overview of data reduction and photometry. One virtue\n",
     "is its inclusion of *real* images with defects.\n",
-    "+ The [AAVSO CCD Obseving Manual](https://www.aavso.org/sites/default/files/publications_files/ccd_photometry_guide/CCDPhotometryGuide.pdf) provides a complete introduction to CCD data reduction and photometry.  \n",
+    "+ The [AAVSO CCD Obseving Manual](https://www.aavso.org/sites/default/files/publications_files/ccd_photometry_guide/CCDPhotometryGuide.pdf) provides a complete introduction to CCD\n",
+    "data reduction and photometry.\n",
     "+ [A Beginner's Guide to Working with Astronomical Data](https://arxiv.org/abs/1905.13189) is much broader than this guide. It\n",
     "includes an introduction to Python."
    ]
@@ -144,16 +154,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Software setup\n",
+    "## Software setup/getting started on your computer\n",
     "\n",
-    "The recommended way to get set up to use this guide is to use the\n",
-    "[Anaconda Python distribution](https://www.anaconda.com/download/) (or the much smaller\n",
-    "[miniconda installer](https://conda.io/miniconda.html)). Once you have that, you can install\n",
+    "### Setting up Python\n",
+    "\n",
+    "To use any of this software you will need an installation of Python. We\n",
+    "recommend the [mambaforge installer](https://github.com/conda-forge/miniforge#mambaforge) or\n",
+    "[miniconda installer](https://conda.io/miniconda.html)\n",
+    " (or the much larger\n",
+    "[Anaconda Python distribution](https://www.anaconda.com/download/) if you must). Once you have that, you can\n",
+    "install\n",
     "everything you need with:\n",
     "\n",
     "```\n",
-    "conda install -c astropy ccdproc photutils ipywidgets matplotlib\n",
-    "```"
+    "conda install -c astropy ccdproc photutils ipywidgets matplotlib jupyterlab\n",
+    "```\n",
+    "\n",
+    "(alternatively, `mamba` should work in place of `conda`; if you get an error\n",
+    "message saying you need to intialize `mamba` then follow the instructions in\n",
+    "that message.\n",
+    "\n",
+    "### Getting a copy of these notebooks\n",
+    "\n",
+    "Get a copy of these files from [https://github.com/astropy/ccd-reduction-and-photometry-guide](https://github.com/astropy/ccd-reduction-and-photometry-guide) -- click the\n",
+    "green \"Code\" button and either clone (if you are using `git`) or download the\n",
+    "zip file and extract it. If you are looking for a specific edition, e.g. `2.0.0`\n",
+    "then go to [https://github.com/astropy/ccd-reduction-and-photometry-guide/releases](https://github.com/astropy/ccd-reduction-and-photometry-guide/releases).\n",
+    "\n",
+    "\n",
+    "### If you want to run this code in a notebook from the command line\n",
+    "\n",
+    "Open a terminal, change directory into the `notebooks` folder in this\n",
+    "repository, type `jupyter lab` and a browser tab should open with the notebooks.\n",
+    "\n",
+    "_You will still need to download the data by following the instructions below in\n",
+    "[Data files](#Data-files)_\n",
+    "\n",
+    "### If you want to run this code in some other way (`IPython`, `Spyder`, `Visual Studio Code`, ...)\n",
+    "\n",
+    "`Spyder` and `Visual Studio Code` can run notebooks; follow the instructions\n",
+    "[above](#Getting-a-copy-of-these-notebooks) to get the notebooks. Follow the instructions\n",
+    "for opening notebooks in the tool you chose.\n",
+    "\n",
+    "If you are copy/pasting code from the online book into one of these tools, you\n",
+    "need two files from the repository. Follow the [instructions for getting a copy of the repository](#Getting-a-copy-of-these-notebooks),\n",
+    "then copy the two files `download_data.py` and `convenience_functions.py` from\n",
+    "the `notebooks` folder to whatever folder you plan to run the code in.\n",
+    "\n",
+    "_You will still need to download the data by following the instructions below in\n",
+    "[Data files](#Data-files)_"
    ]
   },
   {
