Update/provide links for convenience_functions.py

--- a/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
+++ b/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
@@ -69,11 +69,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Python file referenced below, [convenience_functions.py](convenience_functions.py), contains a\n",
-    "few functions for convenient display of images in a notebook. Note that by\n",
-    "clicking the above link you can read (or edit) the file in the browser. You can\n",
+    "The Python file referenced below, `convenience_functions.py`, contains a\n",
+    "few functions for convenient display of images in a notebook.\n",
+    "\n",
+    "You can get a copy of this file a few ways. \n",
+    "\n",
+    "1. If you are running the notebooks in your browser then this link will open the \n",
+    "file in another Jupyter Lab tab: [convenience_functions.py](convenience_functions.py). You can\n",
     "also read/edit it in your preferred editor, but it's handy to know that editing\n",
-    "Python files in the Jupyter notebook environment is possible."
+    "Python files in the Jupyter notebook environment is possible.\n",
+    "2. If you are reading the book online you can view a copy of the file \n",
+    "here: [convenience_functions.py](https://github.com/astropy/ccd-reduction-and-photometry-guide/blob/main/notebooks/convenience_functions.py)\n",
+    "3. If you want a copy of the file without doing a copy/paste, you can \n",
+    "download or clone this repository, including the notebooks and code, \n",
+    "at [https://github.com/astropy/ccd-reduction-and-photometry-guide](https://github.com/astropy/ccd-reduction-and-photometry-guide) \n",
+    "(click on the green \"Code\" button for options) \n"
    ]
   },
   {
