Add contributor name

--- a/notebooks/00-00-Preface.ipynb
+++ b/notebooks/00-00-Preface.ipynb
@@ -119,6 +119,7 @@
     "+ Kelle Cruz\n",
     "+ Adam Ginsburg\n",
     "+ Yash Gondhalekar\n",
+    "+ Lia G\n",
     "+ Richard Hendricks\n",
     "+ Stuart Littlefair\n",
     "+ Matt Phillips\n",
