--- a/v/dev/_sources/notebooks/00-00-Preface.ipynb
+++ b/v/dev/_sources/notebooks/00-00-Preface.ipynb
@@ -113,17 +113,21 @@
     "The following people contributed to this work by making suggestions, testing\n",
     "code, or providing feedback on drafts. We are grateful for their assistance!\n",
     "\n",
+    "+ Nicolás Cardiel\n",
     "+ Simon Conseil\n",
     "+ Lia Corrales\n",
     "+ Kelle Cruz\n",
     "+ Adam Ginsburg\n",
     "+ Yash Gondhalekar\n",
+    "+ Lia G\n",
     "+ Richard Hendricks\n",
     "+ Stuart Littlefair\n",
     "+ Matt Phillips\n",
+    "+ Benjamin Shafransky\n",
     "+ Isobel Snellenberger\n",
     "+ Kris Stern\n",
     "+ Thomas Stibor\n",
+    "+ Sarah Tuttle\n",
     "\n",
     "If you have provided feedback and are not listed above, we apologize -- please\n",
     "[open an issue here](https://github.com/astropy/ccd-reduction-and-photometry-guide/issues/new) so we can fix it."
