astronomical image added

--- a/notebooks/01-00-Understanding-an-astronomical-CCD-image.ipynb
+++ b/notebooks/01-00-Understanding-an-astronomical-CCD-image.ipynb
@@ -20,7 +20,14 @@
     "*why* pixel values are not directly proportional to light is useful before\n",
     "diving into the details of image reduction."
    ]
-  }
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](../book_media/images/jw02107-o039_t018_miri_f770w_i2d.png)"
+   ]
+  } 
  ],
  "metadata": {
   "kernelspec": {
