--- a/notebooks/00-00-Preface.ipynb
+++ b/notebooks/00-00-Preface.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -21,6 +23,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,6 +31,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,6 +70,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -73,6 +78,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -80,6 +86,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -94,6 +101,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -105,6 +113,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -134,6 +143,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -155,6 +165,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -175,7 +186,7 @@
     "```\n",
     "\n",
     "(alternatively, `mamba` should work in place of `conda`; if you get an error\n",
-    "message saying you need to intialize `mamba` then follow the instructions in\n",
+    "message saying you need to initialize `mamba` then follow the instructions in\n",
     "that message.\n",
     "\n",
     "### Getting a copy of these notebooks\n",
@@ -192,24 +203,25 @@
     "repository, type `jupyter lab` and a browser tab should open with the notebooks.\n",
     "\n",
     "_You will still need to download the data by following the instructions below in\n",
-    "[Data files](#Data-files)_\n",
+    "[Data files](#data-files)_\n",
     "\n",
     "### If you want to run this code in some other way (`IPython`, `Spyder`, `Visual Studio Code`, ...)\n",
     "\n",
     "`Spyder` and `Visual Studio Code` can run notebooks; follow the instructions\n",
-    "[above](#Getting-a-copy-of-these-notebooks) to get the notebooks. Follow the instructions\n",
+    "[above](#getting-a-copy-of-these-notebooks) to get the notebooks. Follow the instructions\n",
     "for opening notebooks in the tool you chose.\n",
     "\n",
     "If you are copy/pasting code from the online book into one of these tools, you\n",
-    "need two files from the repository. Follow the [instructions for getting a copy of the repository](#Getting-a-copy-of-these-notebooks),\n",
+    "need two files from the repository. Follow the [instructions for getting a copy of the repository](#getting-a-copy-of-these-notebooks),\n",
     "then copy the two files `download_data.py` and `convenience_functions.py` from\n",
     "the `notebooks` folder to whatever folder you plan to run the code in.\n",
     "\n",
     "_You will still need to download the data by following the instructions below in\n",
-    "[Data files](#Data-files)_"
+    "[Data files](#data-files)_"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -247,7 +259,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -261,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
