--- a/notebooks/01-08-Overscan.ipynb
+++ b/notebooks/01-08-Overscan.ipynb
@@ -290,7 +290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -304,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
