--- a/notebooks/06-03-science-images-calibration-examples.ipynb
+++ b/notebooks/06-03-science-images-calibration-examples.ipynb
@@ -109,7 +109,7 @@
     "The data in this example is from chip 0 of the Large Format Camera at Palomar\n",
     "Observatory. In earlier notebooks we determined that:\n",
     "\n",
-    "+ This CCD has a [useful overscan region](01.08-Overscan.ipynb#Case-1:-Cryogenically-cooled-Large-Format-Camera-(LFC)-at-Palomar).\n",
+    "+ This CCD has a [useful overscan region](01-08-Overscan.ipynb#Case-1:-Cryogenically-cooled-Large-Format-Camera-(LFC)-at-Palomar).\n",
     "+ There is [no need to scale dark frames](05-03-Calibrating-the-flats.ipynb#Subtracting-bias-is-not-necessary-in-this-example) in this data, and so no need to subtract bias.\n",
     "\n",
     "First, we create [ImageFileCollection](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html)s for the raw data and the calibrated\n",
@@ -449,7 +449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -463,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
